// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.secreports.v1;

//import "google/protobuf/duration.proto";
//import "google/protobuf/timestamp.proto";
import "teleport/header/v1/resourceheader.proto";
//import "teleport/trait/v1/trait.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/secreports/v1;secreportsv1";

// AuditQuery is ...
message AuditQuery {
  // header is the header for the resource.
  teleport.header.v1.ResourceHeader header = 1;
  // spec is
  AuditQuerySpec spec = 2;
}

// AuditQuery spec is ...
message AuditQuerySpec {
  // query is ...
  string query = 2;
  // desc is ...
  string desc = 3;
}

// AuditQuery is ...
message SecurityReport {
  // header is the header for the resource.
  teleport.header.v1.ResourceHeader header = 1;
  // spec is
  SecurityReportSpec spec = 2;
}

// TODO
message SecurityReportSpec {
  // header is the header for the resource.
  // TODO
  string name = 2;
  // TODO
  string desc = 3;
  // TODO
  repeated string queries = 4;
}

// todo:
message SecurityReportState {
  // header is the header for the resource.
  teleport.header.v1.ResourceHeader header = 1;
  // spec is
  SecurityReportStateSpec spec = 2;
}

// FOoo
message SecurityReportStateSpec {
  // state is
  string state = 1;
  // updated_at is
  string updated_at = 2;
}
